# calculate_DCF

./: .gitignore  Big_query_financials.db  DCF_Input.py  DCF_calc.py  DCF_prelim_calc.py  LookForPraw.py  QuarterlyNumber.py  README.md  bal_bck_to_bq.py  big_query_sec.py  bing_map_api.py  bucket_to_bigquery.py  dash_board.py  dashboard_dash.py  data_class.py  data_to_bucket.py  dockerfile  finviz.py  news_scraper.py  pyproject.toml  pyvenv.cfg  raw_data_to_bucket.py  reddit_scraper.py  redfin.py  requirements.txt  save_to_db.py  sec_big_query.py  sqlite_database_control.py  trying_gnews.py  yahoo_finance.py
Scripts/: activate  activate.bat  google  wsdump.py
app/: dcf_main.py
app/.streamlit/: config.toml
app/dag/: news_schedule.py
app/dcf_portion/: DCF_avail_ticker.py  (+14 more)
dcf_portion/: DCF_prelim_calc.py  data_to_bucket.py  income_bck_to_bq.py
financial_data/: 0000002488.parquet  0000077476.parquet  0000320193.parquet  0000789019.parquet  0001018724.parquet  0001045810.parquet  0001730168.parquet
news_dags/: .dockerignore  README.md  dockerfile  requirements.txt  setup.py  workspace.yaml
news_portion/: news_scraper.py
news_section/: goog_auth.py  main.py  news_scraper.py  news_text.py  reddit_scraper.py  ticker_list.py
src/: DCF_calculator.py  FinancialDataETL.py  __init__.py  data_processor.py  extractEdgar.py  llm.py  news_scraper.py  news_text.py  reddit_scraper.py  statements_to_bq.py  text_sentiment.py  ticker_list.py  upload_to_bucket.py
tests/: fin_test.py  test_data_processor.py  test_dcf_calculator.py  test_inputs.py  test_live_edgar.py
(+48 files in other folders)
