[tool.poetry]
name = "calculate-dcf"
version = "0.1.0"
description = ""
authors = ["kollerbud <kollerbud@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "edgartools>=5.3.0",
    "pandas>=2.3.3",
    "duckdb>=1.4.3",
]

[dependency-groups]
dev = [
    "duckdb>=1.4.4",
    "edgartools>=5.18.0",
    "pandas>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
