[project]
name = "calculate_DCF"
version = "0.1.0"
description = "A project to calculate DCF"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "duckdb>=1.4.4",
    "edgartools>=5.18.0",
    "pandas>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "tests"]